--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "url": "http://github.com/Gozala/dom-reduce/issues/"
   },
   "dependencies": {
-    "reducible": "~1.0.6"
+    "reducible": "Raynos/reducible#v1.0.6"
   },
   "devDependencies": {
     "test": "~0.5.0",
@@ -36,8 +36,7 @@
   "main": "./index.js",
   "scripts": {
     "test": "node ./node_modules/phantomify/bin/cmd.js ./test/index.js",
-    "repl": "node node_modules/repl-utils",
-    "postinstall": "npm dedup"
+    "repl": "node node_modules/repl-utils"
   },
   "licenses": [
     {
